--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.3
 dominate==2.6.0
+gunicorn==20.1.0
 Flask==2.0.2
 Flask-Bootstrap==3.3.7.1
 idna==3.3
